--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,34 @@
+# Это базовый рабочий процесс, который поможет вам приступить к выполнению Actions
+
 name: CI
+
+# Определяет, когда будет запущено action. Запускает рабочий процесс по запросу push или pull request
+# события, но только для главной ветви
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
+# Выполнение рабочего процесса состоит из одного или нескольких заданий, которые могут выполняться последовательно или параллельно
 jobs:
+  # Этот рабочий процесс содержит одно задание под названием "build".
   build:
+    # Тип программы, на которой будет выполняться задание
     runs-on: ubuntu-latest
     
+    # Шаги представляют собой последовательность задач, которые будут выполнены как часть задания
     steps:
-    - uses: action/checkout@v2
+    # Проверьте свой репозиторий в разделе $GITHUB_WORKSPACE, чтобы ваша работа могла получить к нему доступ
+    - uses: actions/checkout@v2
     
-    - name: Run a one-line script
-      run: echo Hello, world!!!
-      
+    # Запускает одну команду с помощью командной строки runners shell
+    - name: Runa one-line script
+      run: echo Hello, world!
+    
+    # Запускает набор команд с помощью командной строки runners shell
     - name: Run a multi-line script
-      run: |
+      run:
         echo Add other actions to build
         echo test, and deploy your project.
